# vectorbc-tool

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  users.csv
notebooks/: 00_vectorbt_for_kids.ipynb  04_Relative_Stringth.ipynb  06_Dividends_Total_Return.ipynb  08_Master_strategy.ipynb  09_Sentiment_correlations.ipynb  101.ipynb  10_Catch-up.ipynb  One-hundered-questions.ipynb  best_strategy.vbt  oo1.ipynb
notebooks/.Trash-0/files/: 100.ipynb  eeee.ipynb
notebooks/.Trash-0/info/: 100.ipynb.trashinfo  eeee.ipynb.trashinfo
notebooks/.ipynb_checkpoints/: 01_MA-checkpoint.ipynb  02_Volume-checkpoint.ipynb  03_Volatility-ATR-checkpoint.ipynb  05_Rubber_Band-checkpoint.ipynb  07_MACD-checkpoint.ipynb  11_basket_trading-checkpoint.ipynb  12_Paper_trading-checkpoint.ipynb  One-hundered-questions-checkpoint.ipynb  What_if_MA_family_02-checkpoint.ipynb  What_if_app_family_01-checkpoint.ipynb  family_03-checkpoint.ipynb
